--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -5,10 +5,133 @@
 }
 
 .homeContainer {
-    background-color: rgb(194, 194, 194);
-    padding: 4vmax;
+    font-size: 60px;
+    background-color: #BB9DBA;
+    padding-top: 4vmax;
     border-radius: 0 0 200px 200px;
-    border-bottom: 200px solid #2E2E2E;
+    border-bottom: 200px solid #BB9DBA;
     position: relative;
     z-index: 1;
 }
+
+.skills {
+    color: white;
+    transform: translateY(-200px);
+    background: linear-gradient(0deg, rgba(58,20,98,1) 3%, rgba(2,75,77,1) 52%);
+
+  height: 1900px;
+  position: relative;
+  margin-bottom: -200px;
+  padding: 200px;
+  box-sizing: border-box;
+  perspective: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.skills > h3 {
+    margin-top: 200px;
+}
+
+.cubeSkills {
+width: 300px;
+height: 300px;
+margin: auto;
+transform: rotateY(20deg);
+animation: cubeRotation 15s linear infinite alternate;
+transform-style: preserve-3d;
+}
+
+ .cubeFace {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px black;
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    opacity: 0.8;
+}
+
+.cubeFace > img {
+    width: inherit;
+    height: inherit;
+}
+
+.face1 {
+    transform: translate3d(0 , 0 , 150px);
+}
+
+.face2 {
+    transform: rotateY(180deg) translate3d(0 , 0 , 150px)
+}
+
+.face3 {
+    transform: rotateY(-90deg) translate3d(0 , 0 , 150px)
+}
+
+.face4 {
+    transform: rotateY(90deg) translate3d(0 , 0 , 150px)
+}
+
+.face5 {
+    transform: rotateX(90deg) translate3d(0 , 0 , 150px)
+}
+
+.face6 {
+    transform: rotateX(-90deg) translate3d(0 , 0 , 150px)
+}
+
+@keyframes cubeRotation {
+    to {
+        transform: rotateY(360deg) rotateX(480deg) rotateZ(720deg) ;
+    }
+}
+
+.sideSkills {
+    margin-top: 200px;
+    padding: 2vmax;
+    background-color: #252525;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    right: 0;
+}
+
+.sideSkills > svg {
+    font-size: 100px;
+    transition: all 0.5s;
+    margin: 20px;
+}
+
+.sideSkills > svg:hover {
+    transform: scale(1.5);
+}
+
+
+
+.tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+.projects {
+    background-color: #BB9DBA;
+    padding-top: 5vmax;
+    transform: translateY(-200px);
+    border-radius: 20% 20% 0 0;
+    margin-bottom: -200px;
+    box-sizing: border-box;
+    min-height: 1000px
+}
+
