--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -18,7 +18,6 @@
     color: white;
     transform: translateY(-200px);
     background: linear-gradient(0deg, rgba(58,20,98,1) 3%, rgba(2,75,77,1) 52%);
-
   height: 1900px;
   position: relative;
   margin-bottom: -200px;
@@ -35,8 +34,8 @@
 }
 
 .cubeSkills {
-width: 300px;
-height: 300px;
+width: 250px;
+height: 250px;
 margin: auto;
 transform: rotateY(20deg);
 animation: cubeRotation 15s linear infinite alternate;
@@ -83,15 +82,10 @@ transform-style: preserve-3d;
     transform: rotateX(-90deg) translate3d(0 , 0 , 150px)
 }
 
-@keyframes cubeRotation {
-    to {
-        transform: rotateY(360deg) rotateX(480deg) rotateZ(720deg) ;
-    }
-}
 
 .sideSkills {
-    margin-top: 200px;
-    padding: 2vmax;
+    margin-top: 120px;
+    padding: 1.5vmax;
     background-color: #252525;
     position: absolute;
     display: flex;
@@ -102,28 +96,13 @@ transform-style: preserve-3d;
 .sideSkills > svg {
     font-size: 100px;
     transition: all 0.5s;
-    margin: 20px;
+    margin: 25px;
 }
 
 .sideSkills > svg:hover {
     transform: scale(1.5);
 }
 
-
-
-.tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-   
-    /* Position the tooltip text - see examples below! */
-    position: absolute;
-    z-index: 1;
-}
 
 .projects {
     background-color: #BB9DBA;
@@ -135,3 +114,19 @@ transform-style: preserve-3d;
     min-height: 1000px
 }
 
+
+.projectsContainer {
+    display: flex;
+    flex-wrap:  wrap;
+    justify-content: center;
+    padding: 2vmax;
+    width: 80%;
+    margin: auto;
+}
+
+
+    @keyframes cubeRotation {
+        to {
+            transform: rotateY(360deg) rotateX(480deg) rotateZ(720deg) ;
+        }
+    }
