--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -6,10 +6,10 @@
 
 .homeContainer {
     font-size: 60px;
-    background-color: #BB9DBA;
+    background-color: azure;
     padding-top: 4vmax;
     border-radius: 0 0 200px 200px;
-    border-bottom: 200px solid #BB9DBA;
+    border-bottom: 200px solid azure;
     position: relative;
     z-index: 1;
 }
@@ -20,7 +20,7 @@
     background: linear-gradient(0deg, rgba(58,20,98,1) 3%, rgba(2,75,77,1) 52%);
   height: 2000px;
   position: relative;
-  margin-bottom: -200px;
+  margin-bottom: -450px;
   padding: 250px;
   box-sizing: border-box;
   perspective: 500px;
@@ -34,13 +34,13 @@
 }
 
 .cubeSkills {
-width: 250px;
-height: 250px;
+width: 300px;
+height: 300px;
 margin: auto;
 transform: rotateY(20deg);
 animation: cubeRotation 15s linear infinite alternate;
 transform-style: preserve-3d;
-margin-top: 500px;
+margin-top: 400px;
 }
 
  .cubeFace {
@@ -60,43 +60,43 @@ margin-top: 500px;
 }
 
 .face1 {
-    transform: translate3d(0 , 0 , 150px);
+    transform: translate3d(0 , 0 , 200px);
 }
 
 .face2 {
-    transform: rotateY(180deg) translate3d(0 , 0 , 150px)
+    transform: rotateY(180deg) translate3d(0 , 0 , 200px)
 }
 
 .face3 {
-    transform: rotateY(-90deg) translate3d(0 , 0 , 150px)
+    transform: rotateY(-90deg) translate3d(0 , 0 , 200px)
 }
 
 .face4 {
-    transform: rotateY(90deg) translate3d(0 , 0 , 150px)
+    transform: rotateY(90deg) translate3d(0 , 0 , 200px)
 }
 
 .face5 {
-    transform: rotateX(90deg) translate3d(0 , 0 , 150px)
+    transform: rotateX(90deg) translate3d(0 , 0 , 200px)
 }
 
 .face6 {
-    transform: rotateX(-90deg) translate3d(0 , 0 , 150px)
+    transform: rotateX(-90deg) translate3d(0 , 0 , 200px)
 }
 
 
 .sideSkills {
-    margin-top: 120px;
-    padding: 1.5vmax;
+    margin-top: -200px;
+    padding: 1.2vmax;
+
     background-color: #252525;
     position: absolute;
     display: flex;
     flex-direction: column;
     right: 0;
-
 }
 
 .sideSkills > svg {
-    font-size: 100px;
+    font-size: 80px;
     transition: all 0.5s;
     margin: 25px;
 }
@@ -106,8 +106,8 @@ margin-top: 500px;
 }
 
 
-.projects {
-    background-color: #BB9DBA;
+.certificates {
+    background-color: azure;
     padding-top: 5vmax;
     transform: translateY(-200px);
     border-radius: 20% 20% 0 0;
@@ -117,7 +117,7 @@ margin-top: 500px;
 }
 
 
-.projectsContainer {
+.certificatesContainer {
     display: flex;
     flex-wrap:  wrap;
     justify-content: center;
